--- a/index.html
+++ b/index.html
@@ -200,6 +200,6 @@
     <h2><i class="fas fa-paint-brush"> </i> Personalizados</h2>
     <p><button class="styled-button">Solicite sua demanda especial aqui! <br> Clica em mim, lindeza</button></p>
 </div>
-
+<b>Todas nossas imagens foram geradas pelo AI Polinnations</b></b>
 </body>
 </html>
